<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pioneerbot_description</name>
  <version>0.0.0</version>
  <description>Pioneer robot description with Velodyne LiDAR support</description>
  <maintainer email="lierrong@todo.todo">lierrong</maintainer>
  <license>lierrong-1.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 添加必要的依赖 -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <!-- 添加 velodyne_gazebo_plugins 依赖 -->
  <depend>velodyne_gazebo_plugins</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
