<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pioneerbot_mapping</name>
  <version>1.0.0</version>
  <description>PioneerBot Gazebo仿真建图专用包</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- 依赖的包（根据你的实际包名调整） -->
  <exec_depend>wheeltec_joy</exec_depend>
  <exec_depend>pioneerbot_description</exec_depend>
  <exec_depend>point_lio</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>